[package]
name = "indy-credx"
version = "0.1.0"
authors = ["Hyperledger Indy Contributors <hyperledger-indy@lists.hyperledger.org>"]
edition = "2018"

description = ""
license = "MIT/Apache-2.0"

[lib]
name = "indy_credx"
path = "src/lib.rs"
crate-type = ["staticlib", "rlib", "cdylib"]

[dependencies]
bs58 = "0.3.0"
lazy_static = "1.3"
log = "0.4.8"
rand = "0.7.0"
regex = "1.2.1"
serde = "1.0.99"
serde_derive = "1.0.99"
serde_json = "1.0.40"
tempfile = "3.1.0"
thiserror = "1.0.9"

[dependencies.ursa]
version = "0.3.2"
default-features = false
# FIXME - we don't need ed25519, but ursa won't build without additional features
features = ["ed25519", "cl_native", "log", "serde"]
